--- a/src/styles.css
+++ b/src/styles.css
@@ -179,4 +179,16 @@
     }
   } */
 
+  /* about section */
+  .about-section {
+    padding: 30px;
+    text-align: center;
+    background-color: white;
+    color:rgba(3, 3, 3, 0.65) ;
+  }
+  
+   /* about section */
+  
+  
+  
   
